--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,40 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-image: url('https://images.pexels.com/photos/2096622/pexels-photo-2096622.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-    background-size: auto 100vh ;
     font-family: Arial;
-    height: 100vh;
+    font-size: 12px;
+  }
+
+  @media (min-width: 400px ){
+    body {
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 600px ){
+    body {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    background-image: url('../img/fundo.jpg');
+    background-size: 100vw auto;
+    align-items: center;
+    display: flex;
+    height: 80vh;
+    justify-content: center;
   }
   
   .menu {
     background-color: white;
+    position: fixed;
+    top: 0;
+    width: 100vw;
   }
   
   .menu ul {
@@ -17,6 +45,11 @@ body {
   .menu li {
     list-style: none;
   }
+
+  .menu a {
+    display: block;
+    padding: 10px;
+  }
   
   a {
     color: teal;
@@ -26,13 +59,22 @@ body {
   a:hover {
     text-decoration: underline;
   }
-  
+
   .site-subtitle,
   .site-title {
-    color: whitesmoke;
+    color: gray;
     text-align: center;
+  }
+
+  .site-title {
+    font-size: 4em;
   }
   
   .site-subtitle {
     font-style: italic;
+  }
+
+  .img-portfolio {
+    height: 180px;
+    width: 180px;
   }
