--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,8 @@ body {
     }
   }
 
+ 
+
   .menu {
     background-color: #fff;
     position: fixed;
@@ -49,10 +51,12 @@ body {
     width: 100vw;
     z-index: 1;
   }
-  
+
+
   .menu ul {
     display: flex;
     justify-content: space-around;
+    width: 80vw;
   }
   
   .menu li {
@@ -74,6 +78,77 @@ body {
     color: teal;
     text-decoration: none;
     transition: 600ms;
+  }
+
+  .submenu {
+    display: none;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+  }
+
+  @media(max-width: 500px) {
+    .menu {
+      display: none;
+    }
+
+    .submenu {
+      display: contents;
+    }
+
+    .hamburguer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      background-color: #FFF;
+      border-radius: 40%;
+      top: 1%;
+      left: 84%;
+      width: 45px;
+      height: 45px;
+    }
+    
+    .hamburguer:active,
+    .hamburguer:hover {
+      transform: scale(1.1);
+    }
+    
+    .hamburguer i {
+      font-size: 20px;
+    }
+    
+    .menuHidden {
+      background-color: #fff;
+      display: none;
+    }
+    
+    .menuNoHidden {
+      background-color: #fff;
+    }
+    
+    .ul-menu {
+      display: flex;
+      justify-content: center;
+    }
+    
+    .ul-menuBlock {
+      display: block;
+      justify-content: center;
+    }
+    
+    .menuNoHidden ul li {
+      list-style: none;
+      padding: 10px;
+    }
+    
+    .menuNoHidden ul a {
+      text-decoration: none;
+      font-family: 'Roboto' sans-serif;
+      font-size: 20px;
+      color: teal;
+    }
+
   }
 
   .site-subtitle,
